# CodeVoyant

./: .gitignore  README.md  analyze.py  pyproject.toml  requirements.txt
scripts/: batch_analyze.py  boxplot_comparison.py  scatter_comparison.py  visualize_3d_benchmark.py
src/algo/: __init__.py  base.py  community_detection.py  community_utils.py  factory.py  girvan_newman.py  louvain.py
src/benchmark/: __init__.py  __main__.py  loader.py  plotter.py  run.py  runner.py
src/graph/: __init__.py  analyzer.py  call_graph.py  dependency_graph.py  serializer.py
src/ui/: app.py  comparison.py  config.py  graph_loader.py  stats_display.py  visualization_tabs.py
tests/: test_community_detection.py  test_girvan.py  test_girvan_comparison.py  test_graph_extraction.py  test_louvain_comparison.py
