[project]
name = "codevoyant"
version = "0.1.0"
description = "Code graph visualization tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "pyan3>=1.2.0",
    "astroid>=3.0.0",
    "pytest>=7.0.0",
    "pylint>=2.15.0",
    "streamlit>=1.50.0",
    "pyvis>=0.3.2",
    "matplotlib>=3.10.7",
]
